--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.18.0",
     "autoprefixer": "^10.4.19",
     "fabric": "^6.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
