--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@prisma/client": "^5.18.0",
     "autoprefixer": "^10.4.19",
     "fabric": "^6.0.0",
+    "html-to-image": "^1.11.13",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.553.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
     "postcss": "^8.4.38",
+    "pptxgenjs": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.20.0",
