--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:all": "npm run next:dev & npm run dev",
     "build": "vite build",
     "preview": "vite preview",
     "next:dev": "next dev",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.553.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "openai": "^6.9.1",
     "postcss": "^8.4.38",
     "pptxgenjs": "^4.0.1",
     "react": "18.2.0",
